repos/emily-python/contents/test/parser/fail/importBlankFrom.em
# Import malformed 2

# Arg: --ast2
# Expect failure

from import a
